Prevent unwanted horizontal scrolling

--- a/web/apollo/assets/styles/sass/40-base/_globals.scss
+++ b/web/apollo/assets/styles/sass/40-base/_globals.scss
@@ -31,6 +31,7 @@
 body {
 	background: $white;
 	color: contrast($white);
+	overflow-x: hidden;
 }
 
 main {
